--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@ng-bootstrap/ng-bootstrap": "^13.0.0",
     "bootstrap": "^5.2.0",
     "jquery": "^3.6.0",
+    "ngx-pagination": "^6.0.2",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "url-polyfill": "^1.1.12",
