--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^14.1.0",
+    "@angular/animations": "^14.1.3",
     "@angular/common": "^14.1.0",
     "@angular/compiler": "^14.1.0",
     "@angular/core": "^14.1.0",
@@ -28,6 +28,7 @@
     "bootstrap": "^5.2.0",
     "jquery": "^3.6.0",
     "ngx-pagination": "^6.0.2",
+    "ngx-toastr": "^15.0.0",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "url-polyfill": "^1.1.12",
